// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bpkHeaderRenderer does not render sort icons if sorting disabled 1`] = `
<div>
  <span
    className="bpk-data-table-column__header"
    title="Label"
  >
    Label
  </span>
</div>
`;

exports[`bpkHeaderRenderer renders sort icon with down icon selected 1`] = `
<div>
  <span
    className="bpk-data-table-column__header"
    title="Label"
  >
    Label
  </span>
  <div
    className="bpk-data-table-column__sort-icons"
  >
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
      />
    </svg>
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
      />
    </svg>
  </div>
</div>
`;

exports[`bpkHeaderRenderer renders sort icon with up icon selected 1`] = `
<div>
  <span
    className="bpk-data-table-column__header"
    title="Label"
  >
    Label
  </span>
  <div
    className="bpk-data-table-column__sort-icons"
  >
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-data-table-column__sort-icon--selected bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
      />
    </svg>
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
      />
    </svg>
  </div>
</div>
`;

exports[`bpkHeaderRenderer renders sort icons 1`] = `
<div>
  <span
    className="bpk-data-table-column__header"
    title="Label"
  >
    Label
  </span>
  <div
    className="bpk-data-table-column__sort-icons"
  >
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--up bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7.463 15h9.074c1.246 0 1.92-1.365 1.11-2.251l-4.354-4.77c-.568-.622-1.59-.641-2.184-.04l-4.718 4.77C5.526 13.581 6.19 15 7.463 15z"
      />
    </svg>
    <svg
      className="bpk-data-table-column__sort-icon bpk-data-table-column__sort-icon--down bpk-icon--rtl-support"
      height="18"
      style={
        Object {
          "height": "1.125rem",
          "width": "1.125rem",
        }
      }
      viewBox="0 0 24 24"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M16.537 9H7.463c-1.246 0-1.92 1.365-1.11 2.251l4.354 4.77c.568.622 1.59.641 2.184.04l4.718-4.77C18.474 10.419 17.81 9 16.537 9z"
      />
    </svg>
  </div>
</div>
`;
